--- a/TP1_API/pom.xml
+++ b/TP1_API/pom.xml
@@ -33,7 +33,7 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-                    </ xecution>
+                    </execution>
                     <execution>
                         <id>generate-code-coverage-report</id>
                         <phase>test</phase>
