--- a/TP1_API/pom.xml
+++ b/TP1_API/pom.xml
@@ -20,7 +20,20 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!-- log4j2-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
